deleted bower.json and bowerrc from root (redundant w/ those in /public) also added angular ui bootstrap bower component untested

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     <script src="/assets/vendor/assets/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/assets/vendor/assets/bower_components/materialize/dist/js/materialize.min.js"></script>
     <script src="/assets/vendor/assets/bower_components/angular-materialize/src/angular-materialize.js"></script>
+    <script src="/assets/vendor/assets/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="/assets/vendor/assets/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
 
     <!-- ANGULAR CUSTOM - GLOBAL & ROUTES -->
