--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
                         <li class="nav-header">
                             <div class="dropdown profile-element">
                                 <span>
-                                    <img alt="image" class="img-circle" src="img/profile_small.jpg" />
+                                    <img alt="image" class="img-circle" src="assets/images/profile_small.jpg" />
                                 </span>
                                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                     <span class="clear">
@@ -281,84 +281,84 @@
                                                 </thead>
                                                 <tbody>
                                                 <tr>
-                                                    <td class="client-avatar"><img alt="image" src="img/a2.jpg"> </td>
+                                                    <td class="client-avatar"><img alt="image" src="assets/images/a2.jpg"> </td>
                                                     <td><a data-toggle="tab" href="#contact-1" class="client-link">Anthony Jackson</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><img alt="image" src="img/a3.jpg"> </td>
+                                                    <td class="client-avatar"><img alt="image" src="assets/images/a3.jpg"> </td>
                                                     <td><a data-toggle="tab" href="#contact-2" class="client-link">Rooney Lindsay</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><img alt="image" src="img/a4.jpg"> </td>
+                                                    <td class="client-avatar"><img alt="image" src="assets/images/a4.jpg"> </td>
                                                     <td><a data-toggle="tab" href="#contact-3" class="client-link">Lionel Mcmillan</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a5.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a5.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-4" class="client-link">Edan Randall</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a6.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a6.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-2" class="client-link">Jasper Carson</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a7.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a7.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-3" class="client-link">Reuben Pacheco</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a1.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a1.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-1" class="client-link">Simon Carson</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a3.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a3.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-2" class="client-link">Rooney Lindsay</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a4.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a4.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-3" class="client-link">Lionel Mcmillan</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a5.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a5.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-4" class="client-link">Edan Randall</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a2.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a2.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-1" class="client-link">Anthony Jackson</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
                                                     <td> 19 </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="img/a7.jpg"></a> </td>
+                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a7.jpg"></a> </td>
                                                     <td><a data-toggle="tab" href="#contact-2" class="client-link">Reuben Pacheco</a></td>
                                                     <td> 7 </td>
                                                     <td> 47 </td>
