view finance en cours

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                         <li class="nav-header">
                             <div class="dropdown profile-element">
                                 <span>
-                                    <img alt="image" class="img-circle" src="assets/images/profile_small.jpg" />
+                                    <img alt="image" class="img-circle" src="img/profile_small.jpg" />
                                 </span>
                                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                     <span class="clear">
@@ -148,244 +148,9 @@
                         </ul>
                     </nav>
                 </div>
-<<<<<<< HEAD
                 <ui-view></ui-view>
               </div>
           </div>
-=======
-                <div class="wrapper wrapper-content">
-                    <!-- END OF FRAME ! Sample Data below -->
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="ibox float-e-margins">
-                                <div class="ibox-title">
-                                    <span class="label label-success pull-right">This month</span>
-                                    <h5>Income</h5>
-                                </div>
-                                <div class="ibox-content">
-                                    <h1 class="no-margins">10 886,20€</h1>
-                                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
-                                    <small>Total income</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="ibox-title">
-                                <span class="label label-info pull-right">This month</span>
-                                <h5>Deals won</h5>
-                            </div>
-                            <div class="ibox-content">
-                                <h1 class="no-margins">11</h1>
-                                <div class="stat-percent font-bold text-info">20% <i class="fa fa-level-up"></i></div>
-                                <small>Deals won this month</small>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="ibox float-e-margins">
-                                <div class="ibox-title">
-                                    <span class="label label-primary pull-right">This month</span>
-                                    <h5>Avg Basket</h5>
-                                </div>
-                                <div class="ibox-content">
-                                    <h1 class="no-margins">106,12€</h1>
-                                    <div class="stat-percent font-bold text-navy">+44% <i class="fa fa-level-up"></i></div>
-                                    <small>Average order size</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="ibox float-e-margins">
-                                <div class="ibox-title">
-                                    <h5>Ongoing deals</h5>
-                                </div>
-                                <div class="ibox-content">
-                                    <table class="table table-hover no-margins">
-                                        <thead>
-                                            <tr>
-                                                <th>Stage</th>
-                                                <th>Client</th>
-                                                <th>Value</th>
-                                                <th>Closing</th>
-                                                <th>Sales rep</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td><small>Demo Scheduled</small></td>
-                                                <td>Google</td>
-                                                <td>8 000€</td>
-                                                <td>31/03/2017</td>
-                                                <td>Tony</td>
-                                            </tr>
-                                            <tr>
-                                                <td><small>Negotiating</small></td>
-                                                <td>Facebook</td>
-                                                <td>8 000€</td>
-                                                <td>31/03/2017</td>
-                                                <td>Mark</td>
-                                            </tr>
-                                            <tr>
-                                                <td><small>Demo Scheduled</small></td>
-                                                <td>Amazon</td>
-                                                <td>12 000€</td>
-                                                <td>30/04/2017</td>
-                                                <td>Mike</td>
-                                            </tr>
-                                            <tr>
-                                                <td><small>Closing</small></td>
-                                                <td>Amazon</td>
-                                                <td>12 000€</td>
-                                                <td>28/02/2017</td>
-                                                <td>Ashley</td>d>
-                                            </tr>
-                                            <tr>
-                                                <td><small>Demo Scheduled</small></td>
-                                                <td>Netflix</td>
-                                                <td>12 450€</td>
-                                                <td>30/04/2017</td>
-                                                <td>Barbara</td>
-                                            </tr>
-                                            <tr>
-                                                <td><small>Demo Scheduled</small></td>
-                                                <td>Slack</td>
-                                                <td>11 000€</td>
-                                                <td>30/04/2017</td>
-                                                <td>Tania</td>
-                                            </tr>
-                                            <tr>
-                                                <td><small>Demo Scheduled</small></td>
-                                                <td>Tesla</td>
-                                                <td>12 000€</td>
-                                                <td>30/04/2017</td>
-                                                <td>Mary</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="ibox">
-                                <div class="ibox-title">
-                                    <h5>Sales activities</h5>
-                                </div>
-                        <div class="ibox-content">
-                            <div class="tab-content">
-                                <div id="tab-1" class="tab-pane active">
-                                    <div class="full-height-scroll">
-                                        <div class="table-responsive">
-                                            <table class="table table-striped table-hover">
-                                                <thead>
-                                                    <tr>
-                                                        <th></th>
-                                                        <th>Rep</th>
-                                                        <th>Deals Won</th>
-                                                        <th>Calls</th>
-                                                        <th>Demos</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr>
-                                                    <td class="client-avatar"><img alt="image" src="assets/images/a2.jpg"> </td>
-                                                    <td><a data-toggle="tab" href="#contact-1" class="client-link">Anthony Jackson</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><img alt="image" src="assets/images/a3.jpg"> </td>
-                                                    <td><a data-toggle="tab" href="#contact-2" class="client-link">Rooney Lindsay</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><img alt="image" src="assets/images/a4.jpg"> </td>
-                                                    <td><a data-toggle="tab" href="#contact-3" class="client-link">Lionel Mcmillan</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a5.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-4" class="client-link">Edan Randall</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a6.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-2" class="client-link">Jasper Carson</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a7.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-3" class="client-link">Reuben Pacheco</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a1.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-1" class="client-link">Simon Carson</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a3.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-2" class="client-link">Rooney Lindsay</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a4.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-3" class="client-link">Lionel Mcmillan</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a5.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-4" class="client-link">Edan Randall</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a2.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-1" class="client-link">Anthony Jackson</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a7.jpg"></a> </td>
-                                                    <td><a data-toggle="tab" href="#contact-2" class="client-link">Reuben Pacheco</a></td>
-                                                    <td> 7 </td>
-                                                    <td> 47 </td>
-                                                    <td> 19 </td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            </div>
-                        </div>
-                    </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
->>>>>>> 863de20fd244b33bc332b31d06557c3246f9c8ac
 
 
         </div>
