--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <script src="/controllers/navigationController.js"></script>
     <script src="/controllers/homeController.js"></script>
     <script src="/controllers/financeController.js"></script>
+    <script src="/controllers/Controller.js"></script>
     <script src="/services/authService.js"></script>
     <script src="/services/dataService.js"></script>
 </head>
@@ -64,7 +65,8 @@
                         <li class="active">
                             <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span> <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
-                                <li class="active"><a href="index.html">Sales</a></li>
+                                <li><a ui-sref="sales">Sales</a></li>
+                                <!-- <li class="active"><a href="index.html">Sales</a></li> -->
                                 <li><a href="#">Marketing</a></li>
                                 <li><a ui-sref="finance">Finance</a></li>
                                 <li><a href="#">Operations</a></li>
