--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script src="/assets/vendor/assets/bower_components/metisMenu/dist/metisMenu.js"></script>
     <script src="/assets/vendor/assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
+    <script src="/assets/js/algolia.js" type="text/javascript"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="/app.js"></script>
@@ -47,7 +48,7 @@
                         <li class="nav-header">
                             <div class="dropdown profile-element">
                                 <span>
-                                    <img alt="image" class="img-circle" src="img/profile_small.jpg" />
+                                    <img alt="image" class="img-circle" src="assets/images/profile_small.jpg" />
                                 </span>
                                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                     <span class="clear">
