--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="/assets/vendor/assets/bower_components/metisMenu/dist/metisMenu.js"></script>
     <script src="/assets/vendor/assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
-    <script src="/assets/js/algolia.js" type="text/javascript"></script>
+    <!-- <script src="/assets/js/algolia.js" type="text/javascript"></script> -->
 
     <!-- ANGULAR CUSTOM -->
     <script src="/app.js"></script>
@@ -35,8 +35,12 @@
     <script src="/controllers/navigationController.js"></script>
     <script src="/controllers/homeController.js"></script>
     <script src="/controllers/financeController.js"></script>
+    <script src="/controllers/chatController.js"></script>
     <script src="/services/authService.js"></script>
     <script src="/services/dataService.js"></script>
+
+    <!-- CUSTOM JS -->
+    <script src="/assets/js/chatbox.js"></script>
 </head>
 
 <body ng-app="meanDash">
@@ -153,6 +157,9 @@
                 <ui-view></ui-view>
               </div>
           </div>
+        </div>
+        <div ng-controller="chatCtrl">
+          <ng-include src="'/views/shared/chat.html'">
         </div>
     </div>
 </body>
