--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <script src="/assets/vendor/assets/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/assets/vendor/assets/bower_components/metisMenu/dist/metisMenu.js"></script>
     <script src="/assets/vendor/assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/assets/vendor/assets/bower_components/socket.io-client/dist/socket.io.min.js"></script>
+    <script src="/assets/vendor/assets/bower_components/angular-socket-io/socket.min.js"></script>
     <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
     <!-- <script src="/assets/js/algolia.js" type="text/javascript"></script> -->
 
@@ -38,6 +40,8 @@
     <script src="/controllers/chatController.js"></script>
     <script src="/services/authService.js"></script>
     <script src="/services/dataService.js"></script>
+    <script src="/services/messageFormatter.js"></script>
+    <script src="/services/socketService.js"></script>
 
     <!-- CUSTOM JS -->
     <script src="/assets/js/chatbox.js"></script>
