--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="/assets/vendor/assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
     <script src="/assets/js/algolia.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="/app.js"></script>
