displaying chats from only one user

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
     <script src="/services/messageFormatter.js"></script>
     <script src="/services/socketService.js"></script>
 
+    <script src="/filters/capitalize.js"></script>
+
     <!-- CUSTOM JS -->
     <script src="/assets/js/chatbox.js"></script>
 </head>
