--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
     <script src="/assets/vendor/assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <script src="/assets/vendor/assets/bower_components/socket.io-client/dist/socket.io.min.js"></script>
     <script src="/assets/vendor/assets/bower_components/angular-socket-io/socket.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
-    <script src="/assets/js/algolia.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script> -->
+    <!-- <script src="/assets/js/algolia.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script> -->
 
     <!-- ANGULAR CUSTOM -->
     <script src="/app.js"></script>
