correctly sending image to server now is the time to cloudinary the shit and then save url in DB and then delete picture from server

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
     <script src="/services/dataService.js"></script> -->
     <script src="/services/messageFormatter.js"></script>
     <script src="/services/socketService.js"></script>
+    <script src="/directives/fileModel.js"></script>
 
     <script src="/filters/capitalize.js"></script>
 
