--- a/public/index.html
+++ b/public/index.html
@@ -60,12 +60,12 @@
     <div id="wrapper" ng-controller="mainCtrl">
         <div class="row border-bottom">
             <nav class="navbar-default navbar-static-side" role="navigation">
-                <div class="sidebar-collapse">
+                <div class="sidebar-collapse" ng-if="currentUser">
                     <ul class="nav metismenu" id="side-menu">
                         <li class="nav-header">
                             <div class="dropdown profile-element">
                                 <span>
-                                    <img alt="image" class="img-circle" src="assets/images/profile_small.jpg" />
+                                    <img alt="image" class="img-circle profilepic" src="{{ currentUser.picture }}" />
                                 </span>
                                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                     <span class="clear">
