follow in progress

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <script src="/controllers/companyController.js"></script>
     <script src="/controllers/salesController.js"></script>
     <script src="/controllers/chatController.js"></script>
+    <script src="/controllers/userController.js"></script>
     <!-- <script src="/services/authService.js"></script>
     <script src="/services/dataService.js"></script> -->
     <script src="/services/messageFormatter.js"></script>
