--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <script src="/controllers/companyController.js"></script>
     <script src="/controllers/salesController.js"></script>
     <script src="/controllers/chatController.js"></script>
+    <script src="/controllers/userController.js"></script>
     <script src="/services/messageFormatter.js"></script>
     <script src="/services/socketService.js"></script>
     <script src="/directives/fileModel.js"></script>
@@ -88,7 +89,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-users"></i> <span class="nav-label">My Team</span></a>
+                            <a ui-sref="userlist"><i class="fa fa-users"></i> <span class="nav-label">Everybody</span></a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-building"></i> <span class="nav-label">My Company</span></a>
